名前を伏せる
名前を伏せる

--- a/public/kaigo/common/json/manifest.json
+++ b/public/kaigo/common/json/manifest.json
@@ -1,6 +1,6 @@
 {
-"name": "Hitoshia-Kaigo",
-"short_name": "Hitoshia",
+"name": "Sample-Kaigo",
+"short_name": "Sample",
 "start_url": "/kaigo/",
 "icons": [
 {
